--- a/Accounting/Accounting. DataLayer/Accounting. DataLayer.csproj
+++ b/Accounting/Accounting. DataLayer/Accounting. DataLayer.csproj
@@ -69,6 +69,8 @@
       <DependentUpon>AccountingModel.tt</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Repositories\ICustomerRepository.cs" />
+    <Compile Include="Services\CustomerRepository.cs" />
   </ItemGroup>
   <ItemGroup>
     <EntityDeploy Include="AccountingModel.edmx">
